<resources>
    <string name="app_name">Alarm</string>
    <string name="sound">Sound</string>
    <string name="standard">Standard</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="monday">Mon</string>
    <string name="sunday">Sun</string>
    <string name="saturday">Sat</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tue</string>
    <string name="delete">Delete</string>
    <string name="TTS">Text-To-Speech</string>
    <string name="time">Time</string>
    <string name="phrase">Phrase</string>
    <string name="volume">Volume</string>
    <string name="no_alarm_clocks">No alarm clocks</string>
    <string name="create_new">Create new by tapping +</string>
    <string name="once">Once</string>
    <string name="repeats">Repeats</string>
    <string name="preview">Preview</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze minutes</string>
</resources>
