<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AlarmActivity">

    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/timePicker"
        android:layout_weight="5"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rlSound"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:layout_marginStart="20dp"
            android:id="@+id/tvaSound"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard"
            android:layout_marginStart="20dp"
            android:layout_below="@id/tvaSound"
            android:id="@+id/tvSoundName"
            android:textSize="20sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"
            android:contentDescription="@string/monday"
            android:onClick="onDayClick"
            android:id="@+id/imgMon"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"
            android:contentDescription="@string/tuesday"
            android:onClick="onDayClick"
            android:id="@+id/imgTue"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"
            android:contentDescription="@string/wednesday"
            android:onClick="onDayClick"
            android:id="@+id/imgWed"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"
            android:contentDescription="@string/thursday"
            android:onClick="onDayClick"
            android:id="@+id/imgThu"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"
            android:contentDescription="@string/friday"
            android:onClick="onDayClick"
            android:id="@+id/imgFri"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"
            android:contentDescription="@string/saturday"
            android:onClick="onDayClick"
            android:id="@+id/imgSat"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sentiment_dissatisfied_black_24dp"
            android:contentDescription="@string/sunday"
            android:onClick="onDayClick"
            android:id="@+id/imgSun"/>
    </LinearLayout>

</LinearLayout>